# spotter

./: .gitignore  LICENSE  README.md  docker-compose.yml  env.example
.sqlx/: query-1bb972b6255658d13100201dce86c995d4e906b1fe46944ae08b4f1444a267f0.json  query-6589993b83607785f878e3dd3f81a3424309e7e8578472d29986987a6ef6e373.json  query-785eb9f576a655647d957172680cfcab4c36e0c684b08ef13add6208cfefa1b3.json  query-e4c2de369400fdfad79dedae931b3f00060fd2a3ba5a398169b851b16580f544.json
migrations/: 0001_init.sql  0002_change_album_release_date_to_text.sql
spotter/: Cargo.toml  Dockerfile
spotter/.sqlx/: query-1fca0d2d109aeea5b35ef92169de549d104646fa50c57f8633970f5f79e20ebd.json  query-426b0d5f87f94f0bbd302bdc7ecebd14c637d1f870309b38ecc6353b7759004d.json  query-901c7822977ef336c775c600081ab44412dde7226916879b3556df007ba0d125.json  query-efe2cd2489c122b16a36c84a5a1e08dfc070130c35c517147568517179082543.json
spotter/src/: auth.rs  database.rs  main.rs  spotify_data.rs
spotter_api/: Cargo.toml  Dockerfile
spotter_api/src/: handle.rs  main.rs  queries.rs  route.rs
src/: auth.rs  database.rs  main.rs  spotify_data.rs
