[package]
name = "spotter_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono" ] }
tokio = { version = "1.49.0", features = [ "full" ] }
